--- a/pages/feedback/reports.html
+++ b/pages/feedback/reports.html
@@ -215,15 +215,20 @@
                                     </div>
                                     <div class="react-select__menu">
                                         <div class="react-select__menu-list">
-                                            <div class="react-select__option" id="react-select-3-option-0" tabindex="-1">За весь период
+                                            <div class="react-select__option react-select__option--is-selected" id="react-select-3-option-0" tabindex="-1">За весь период
                                             </div>
-                                            <div class="react-select__option"
-                                                id="react-select-3-option-1" tabindex="-1">2019</div>
+                                        
+                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2024</div>
+                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2023</div>
+                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2022</div>
+                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2021</div>
                                             <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2020</div>
-                                            <div class="react-select__option" id="react-select-3-option-3" tabindex="-1">2021</div>
-                                            <div class="react-select__option" id="react-select-3-option-4" tabindex="-1">2022</div>
-                                            <div class="react-select__option" id="react-select-3-option-5" tabindex="-1">2023</div>
-                                            <div class="react-select__option" id="react-select-3-option-6" tabindex="-1">2024</div>
+                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2019</div>
+                                            <div class="react-select__option " id="react-select-3-option-2" tabindex="-1">2018</div>
+                                            <div class="react-select__option" id="react-select-3-option-3" tabindex="-1">2017</div>
+                                            <div class="react-select__option" id="react-select-3-option-4" tabindex="-1">2016</div>
+                                            <div class="react-select__option" id="react-select-3-option-5" tabindex="-1">2015</div>
+                                            <div class="react-select__option" id="react-select-3-option-6" tabindex="-1">2014</div>
                                         </div>
                                     </div>
                                 </div>
