--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -444,7 +444,8 @@
             </section>
             <div>
                 <section class="InfoPage_section" id="userGuide">
-                    <div class="Default_defaultContainer " style="padding-top: 80px; padding-bottom: 104px;">
+                    <div class="Default_defaultContainer ">
+                    <div class="Default_defaultContainer_inner ">
                         <h1>Как это работает</h1>
                         <div class="UserGuilde_rootUserGuide">
                             <div class="UserGuilde_blockUserGuide">
@@ -498,6 +499,7 @@
                                     <p>04.</p><img src="https://storage.yandexcloud.net/pp-prod/stage_ill_afbb1de62a.svg">
                                 </div>
                                 <p class="UserGuilde_UserGuideText">Улыбаетесь, читая отзывы семей</p>
+                            </div>
                             </div>
                         </div>
                     </div>
