change feedback blocks

--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -368,14 +368,17 @@
                                     </div>
                                     <div class="MiniFeedback_title">Евгения и Эвелина</div>
                                     <div class="MiniFeedback_code">31-КряК-КРС-ПА24</div>
-                                    <div class="MiniFeedback_description">Выражаем огромную благодарность БФ Подари
-                                        Подарок, Марине и Игорю, за чудесный подарок для Эвелиночки. Эвелина очень будет
-                                        рада, что теперь можно распечатывать на принтере картинки и раскрашивать дома.
-                                        Спасибо за ваше доброе сердце, за счастливое детство моего ребенка. Спасибо Наталье
-                                        волонтеру фонда за организацию и помощь в поисках благотворителей! Фонду Подари
-                                        Подарок за отзывчивость, за то, что организованно помогаете деткам и объединяете
-                                        неравнодушных людей вместе для благого дела. Дай Бог вам всем здоровья!</div><button
-                                        class=" Generic_iconRoot ">
+                                    <div class="MiniFeedback_descriptionWrap">
+                                        <div class="MiniFeedback_description">Выражаем огромную благодарность БФ Подари
+                                            Подарок, Марине и Игорю, за чудесный подарок для Эвелиночки. Эвелина очень будет
+                                            рада, что теперь можно распечатывать на принтере картинки и раскрашивать дома.
+                                            Спасибо за ваше доброе сердце, за счастливое детство моего ребенка. Спасибо Наталье
+                                            волонтеру фонда за организацию и помощь в поисках благотворителей! Фонду Подари
+                                            Подарок за отзывчивость, за то, что организованно помогаете деткам и объединяете
+                                            неравнодушных людей вместе для благого дела. Дай Бог вам всем здоровья!</div>
+                                    </div>
+                                        <button
+                                        class=" Generic_iconRoot MiniFeedback_btn">
                                         <p style="margin-right: 8px; text-transform: unset;">ПОДРОБНЕЕ</p><svg
                                             xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"
                                             viewBox="0 0 40 40" class="Generic_icon">
