--- a/pages/feedback/reports.html
+++ b/pages/feedback/reports.html
@@ -395,10 +395,9 @@
                                         </button>
                                         <div id="popup-root">
                                             <div class="popup-content " role="tooltip" id="popup-350">
-                                                <div
-                                                    style="height: 8px; width: 16px; position: absolute; background: transparent; color: rgb(255, 255, 255); z-index: -1; transform: rotate(0deg) translateY(-100%) translateX(-50%); top: 0%; left: 50%;">
-                                                    <svg data-testid="arrow" class="popup-arrow " viewBox="0 0 32 16" style="position: absolute;">
-                                                        <path d="M16 0l16 16H0z" fill="currentcolor"></path>
+                                                <div class="arrow-wrap">
+                                                    <svg data-testid="arrow" class="popup-arrow " viewBox="0 0 32 16" style="position: absolute;" fill="#ffffff">
+                                                        <path d="M16 0l16 16H0z" fill="#fffff"></path>
                                                     </svg></div>
                                                 <p style="font-weight: 600; text-align: center; font-size: 13px;">свидетельство надежности Фонда</p>
                                             </div>
