fix ragister page

--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -50,7 +50,7 @@
     <div id="__next">
         <div class="LoginTemplate_pageRoot">
             <div class="LoginTemplate_cover"></div>
-            <div class="LoginTemplate_rightSide">
+            <div class="LoginTemplate_rightSide Login_rightSide">
                 <div class="LoginTemplate_logoBlock"><img
                         src="https://storage.yandexcloud.net/pp-prod/logo_dc02902ab3.svg" alt="logo"
                         class="LoginTemplate_logo">
