видео и другие правки

--- a/pages/main.html
+++ b/pages/main.html
@@ -324,7 +324,7 @@
                                                 class="ImageTextLink_image"
                                                 style="background-image: url(&quot;../assets/SlideBG-1.svg&quot;); position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;">
                                         </span>
-                                        <div style="position: absolute; right: 0px; bottom: 5px;">
+                                        <div class="Dialog_dialogRoot_wrap">
                                             <div class="Dialog_dialogRoot">
                                                 <div class="Dialog_dialogBloop">
                                                     <h2>Акции адресной помощи</h2>
@@ -373,7 +373,7 @@
                                                 class="ImageTextLink_image"
                                                 style="background-image: url(&quot;../assets/SlideBG-1.svg&quot;); position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;">
                                             </span>
-                                        <div style="position: absolute; right: 0px; bottom: 5px;">
+                                        <div class="Dialog_dialogRoot_wrap">
                                             <div class="Dialog_dialogRoot">
                                                 <div class="Dialog_dialogBloop">
                                                     <p>Это Ян с мамой Катей.
@@ -422,7 +422,7 @@
                                                 class="ImageTextLink_image"
                                                 style="background-image: url(&quot;../assets/SlideBG-1.svg&quot;); position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;">
                                         </span>
-                                        <div style="position: absolute; right: 0px; bottom: 5px;">
+                                        <div class="Dialog_dialogRoot_wrap">
                                             <div class="Dialog_dialogRoot">
                                                 <div class="Dialog_dialogBloop">
                                                     <p>Это волонтеры фонда Сергей и Владимир.<br>Волонтёры фонда
@@ -472,7 +472,7 @@
                                                 class="ImageTextLink_image"
                                                 style="background-image: url(&quot;../assets/SlideBG-1.svg&quot;); position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;">
                                         </span>
-                                        <div style="position: absolute; right: 0px; bottom: 5px;">
+                                        <div class="Dialog_dialogRoot_wrap">
                                             <div class="Dialog_dialogRoot">
                                                 <div class="Dialog_dialogBloop">
                                                     <p>Это Марина с мамой, даритель Наталья и руководитель фонда Лариса.
@@ -521,7 +521,7 @@
                                                 class="ImageTextLink_image"
                                                 style="background-image: url(&quot;../assets/SlideBG-1.svg&quot;); position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;">
                                         </span>
-                                        <div style="position: absolute; right: 0px; bottom: 5px;">
+                                        <div class="Dialog_dialogRoot_wrap">
                                             <div class="Dialog_dialogRoot">
                                                 <div class="Dialog_dialogBloop">
                                                     <p>Это дружная команда фонда.
