--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -305,7 +305,7 @@
                                                         decoding="async" data-nimg="fill"
                                                         class="ImageTextLink_image"
                                                         style="background-image: url(&quot;assets/SlideBG-1.svg&quot;); position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"></span>
-                                                <div style="position: absolute; right: 0px; bottom: 5px;">
+                                                <div class="Dialog_dialogRoot_wrap">
                                                     <div
                                                         class="Dialog_dialogRoot  Dialog_miniText Dialog_closed ">
                                                         <div class="Dialog_dialogBloop">
@@ -335,7 +335,7 @@
                                                         decoding="async" data-nimg="fill"
                                                         class="ImageTextLink_image"
                                                         style="background-image: url(&quot;assets/SlideBG-1.svg&quot;); position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"></span>
-                                                <div style="position: absolute; right: 0px; bottom: 5px;">
+                                                <div class="Dialog_dialogRoot_wrap">
                                                     <div
                                                         class="Dialog_dialogRoot  Dialog_miniText Dialog_closed ">
                                                         <div class="Dialog_dialogBloop">
@@ -365,7 +365,7 @@
                                                         decoding="async" data-nimg="fill"
                                                         class="ImageTextLink_image"
                                                         style="background-image: url(&quot;assets/SlideBG-1.svg&quot;); position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"></span>
-                                                <div style="position: absolute; right: 0px; bottom: 5px;">
+                                                <div class="Dialog_dialogRoot_wrap">
                                                     <div
                                                         class="Dialog_dialogRoot  Dialog_miniText Dialog_closed ">
                                                         <div class="Dialog_dialogBloop">
@@ -395,7 +395,7 @@
                                                         decoding="async" data-nimg="fill"
                                                         class="ImageTextLink_image"
                                                         style="background-image: url(&quot;assets/SlideBG-1.svg&quot;); position: absolute; inset: 0px; box-sizing: border-box; padding: 0px; border: none; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"></span>
-                                                <div style="position: absolute; right: 0px; bottom: 5px;">
+                                                <div class="Dialog_dialogRoot_wrap">
                                                     <div
                                                         class="Dialog_dialogRoot  Dialog_miniText Dialog_closed ">
                                                         <div class="Dialog_dialogBloop">
