--- a/pages/family.html
+++ b/pages/family.html
@@ -422,6 +422,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="../scripts/slick.min.js"></script>
+    <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
     <script src="../scripts/slider.js"></script>
     <script src="../scripts/burger.js"></script>
     <script src="../scripts/popup.js"></script>
