implement plus, minus, trash btn in cart

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -175,7 +175,7 @@
             <div class="Mobile_helpBtnContent">помочь</div>
         </a>
         <div class="Page_root Page_white ">
-            <div class="Default_defaultContainer " style="padding-top: 40px; padding-bottom: 120px;">
+            <div class="Default_defaultContainer Cart_container" style="padding-top: 40px; padding-bottom: 120px;">
                 <section class="Cart_root">
                     <h1>Корзина подарков</h1>
                     <div class="Cart_flex">
@@ -216,11 +216,11 @@
                                     <div class="CartNeeds_row">
                                         <p class="CartNeeds_count">доступно 1 шт. </p>
                                         <div class="CartNeeds_counter">
-                                            <div class="Counter_wrap "><button class="Counter_btn" disabled=""><svg
+                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus"><svg
                                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                                    class="Counter_btn Counter_plus"><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                                         height="10" fill="none" viewBox="0 0 10 10">
                                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
@@ -267,11 +267,11 @@
                                     <div class="CartNeeds_row">
                                         <p class="CartNeeds_count">доступно 1 шт. </p>
                                         <div class="CartNeeds_counter">
-                                            <div class="Counter_wrap "><button class="Counter_btn" disabled=""><svg
+                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus"><svg
                                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                                    class="Counter_btn Counter_plus"><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                                         height="10" fill="none" viewBox="0 0 10 10">
                                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
@@ -318,11 +318,11 @@
                                     <div class="CartNeeds_row">
                                         <p class="CartNeeds_count">доступно 1 шт. </p>
                                         <div class="CartNeeds_counter">
-                                            <div class="Counter_wrap "><button class="Counter_btn" disabled=""><svg
+                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus"><svg
                                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                                    class="Counter_btn Counter_plus"><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                                         height="10" fill="none" viewBox="0 0 10 10">
                                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
@@ -495,11 +495,11 @@
                                     <div class="CartNeeds_row">
                                         <p class="CartNeeds_count">доступно 1 шт. </p>
                                         <div class="CartNeeds_counter">
-                                            <div class="Counter_wrap "><button class="Counter_btn" disabled=""><svg
+                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus"><svg
                                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                                    class="Counter_btn Counter_plus"><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                                         height="10" fill="none" viewBox="0 0 10 10">
                                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
@@ -672,11 +672,11 @@
                                     <div class="CartNeeds_row">
                                         <p class="CartNeeds_count">доступно 1 шт. </p>
                                         <div class="CartNeeds_counter">
-                                            <div class="Counter_wrap "><button class="Counter_btn" disabled=""><svg
+                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus"><svg
                                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                                    class="Counter_btn Counter_plus"><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                                         height="10" fill="none" viewBox="0 0 10 10">
                                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
@@ -723,11 +723,11 @@
                                     <div class="CartNeeds_row">
                                         <p class="CartNeeds_count">доступно 1 шт. </p>
                                         <div class="CartNeeds_counter">
-                                            <div class="Counter_wrap "><button class="Counter_btn" disabled=""><svg
+                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus"><svg
                                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                                     </svg></button><input class="Counter_input" type="number" value="1"><button
-                                                    class="Counter_btn" disabled=""><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                                    class="Counter_btn Counter_plus"><svg xmlns="http://www.w3.org/2000/svg" width="10"
                                                         height="10" fill="none" viewBox="0 0 10 10">
                                                         <rect x="6" width="10" height="2" rx="1" transform="rotate(90 6 0)" fill="#292929"></rect>
                                                         <rect y="4" width="10" height="2" rx="1" fill="#292929"></rect>
@@ -979,7 +979,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="" style="margin: 40px 0px 0px 20px;">
+                                <div class="Cart_howBtn">
                                     <button
                                         class="Icon_iconButtonRoot Icon_textButton Icon_small Icon_black "><svg
                                             xmlns="http://www.w3.org/2000/svg" width="28px" height="28px" fill="none"
@@ -1100,5 +1100,6 @@
     <script src="../scripts/burger.js"></script>
     <script src="../scripts/popup.js"></script>
     <script src="../scripts/header.js"></script>
+    <script src="../scripts/cart-need.js"></script>
 </body>
 </html>
