fix button in cart

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -1039,8 +1039,8 @@
                                     </div>
                                 </div>
                                 <button
-                                    class=" Generic_buttonRoot Generic_medium  "
-                                    style="margin-top: 16px; width: 100%;">забронировать
+                                    class=" Generic_buttonRoot Generic_medium Cart_bookBtn "
+                                    >забронировать
                                 </button>
                             </div>
                         </div>
