--- a/pages/cart.html
+++ b/pages/cart.html
@@ -216,7 +216,7 @@
                                     <div class="CartNeeds_row">
                                         <p class="CartNeeds_count">доступно 1 шт. </p>
                                         <div class="CartNeeds_counter">
-                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus"><svg
+                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus" disabled="true"><svg
                                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                                     </svg></button><input class="Counter_input" type="number" value="1"><button
@@ -227,9 +227,10 @@
                                                     </svg></button></div>
                                         </div>
                                     </div>
-                                    <div class="CartNeeds_trash"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"
+                                    <div class="CartNeeds_trash Generic_gray">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"
                                             fill="none" viewBox="0 0 24 24">
-                                            <path fill="var(--gray-40)"
+                                            <path class="Generic_iconPath" fill="var(--primary)"
                                                 d="M21 6h-5V4.33A2.42 2.42 0 0013.5 2h-3A2.42 2.42 0 008 4.33V6H3a1 1 0 000 2h1v11a3 3 0 003 3h10a3 3 0 003-3V8h1a1 1 0 100-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4V4.33zM18 19a1 1 0 01-1 1H7a1 1 0 01-1-1V8h12v11z">
                                             </path>
                                         </svg></div>
@@ -267,7 +268,7 @@
                                     <div class="CartNeeds_row">
                                         <p class="CartNeeds_count">доступно 1 шт. </p>
                                         <div class="CartNeeds_counter">
-                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus"><svg
+                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus" disabled="true"><svg
                                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                                     </svg></button><input class="Counter_input" type="number" value="1"><button
@@ -278,9 +279,9 @@
                                                     </svg></button></div>
                                         </div>
                                     </div>
-                                    <div class="CartNeeds_trash"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"
+                                    <div class="CartNeeds_trash Generic_gray"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"
                                             fill="none" viewBox="0 0 24 24">
-                                            <path fill="var(--gray-40)"
+                                            <path class="Generic_iconPath" fill="var(--primary)"
                                                 d="M21 6h-5V4.33A2.42 2.42 0 0013.5 2h-3A2.42 2.42 0 008 4.33V6H3a1 1 0 000 2h1v11a3 3 0 003 3h10a3 3 0 003-3V8h1a1 1 0 100-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4V4.33zM18 19a1 1 0 01-1 1H7a1 1 0 01-1-1V8h12v11z">
                                             </path>
                                         </svg></div>
@@ -318,7 +319,7 @@
                                     <div class="CartNeeds_row">
                                         <p class="CartNeeds_count">доступно 1 шт. </p>
                                         <div class="CartNeeds_counter">
-                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus"><svg
+                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus" disabled="true"><svg
                                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                                     </svg></button><input class="Counter_input" type="number" value="1"><button
@@ -329,9 +330,9 @@
                                                     </svg></button></div>
                                         </div>
                                     </div>
-                                    <div class="CartNeeds_trash"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"
+                                    <div class="CartNeeds_trash Generic_gray"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"
                                             fill="none" viewBox="0 0 24 24">
-                                            <path fill="var(--gray-40)"
+                                            <path class="Generic_iconPath" fill="var(--primary)"
                                                 d="M21 6h-5V4.33A2.42 2.42 0 0013.5 2h-3A2.42 2.42 0 008 4.33V6H3a1 1 0 000 2h1v11a3 3 0 003 3h10a3 3 0 003-3V8h1a1 1 0 100-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4V4.33zM18 19a1 1 0 01-1 1H7a1 1 0 01-1-1V8h12v11z">
                                             </path>
                                         </svg></div>
@@ -495,7 +496,7 @@
                                     <div class="CartNeeds_row">
                                         <p class="CartNeeds_count">доступно 1 шт. </p>
                                         <div class="CartNeeds_counter">
-                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus"><svg
+                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus" disabled="true"><svg
                                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                                     </svg></button><input class="Counter_input" type="number" value="1"><button
@@ -506,9 +507,9 @@
                                                     </svg></button></div>
                                         </div>
                                     </div>
-                                    <div class="CartNeeds_trash"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"
+                                    <div class="CartNeeds_trash Generic_gray"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"
                                             fill="none" viewBox="0 0 24 24">
-                                            <path fill="var(--gray-40)"
+                                            <path class="Generic_iconPath" fill="var(--primary)"
                                                 d="M21 6h-5V4.33A2.42 2.42 0 0013.5 2h-3A2.42 2.42 0 008 4.33V6H3a1 1 0 000 2h1v11a3 3 0 003 3h10a3 3 0 003-3V8h1a1 1 0 100-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4V4.33zM18 19a1 1 0 01-1 1H7a1 1 0 01-1-1V8h12v11z">
                                             </path>
                                         </svg></div>
@@ -672,7 +673,7 @@
                                     <div class="CartNeeds_row">
                                         <p class="CartNeeds_count">доступно 1 шт. </p>
                                         <div class="CartNeeds_counter">
-                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus"><svg
+                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus" disabled="true"><svg
                                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                                     </svg></button><input class="Counter_input" type="number" value="1"><button
@@ -683,9 +684,9 @@
                                                     </svg></button></div>
                                         </div>
                                     </div>
-                                    <div class="CartNeeds_trash"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"
+                                    <div class="CartNeeds_trash Generic_gray"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"
                                             fill="none" viewBox="0 0 24 24">
-                                            <path fill="var(--gray-40)"
+                                            <path class="Generic_iconPath" fill="var(--primary)"
                                                 d="M21 6h-5V4.33A2.42 2.42 0 0013.5 2h-3A2.42 2.42 0 008 4.33V6H3a1 1 0 000 2h1v11a3 3 0 003 3h10a3 3 0 003-3V8h1a1 1 0 100-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4V4.33zM18 19a1 1 0 01-1 1H7a1 1 0 01-1-1V8h12v11z">
                                             </path>
                                         </svg></div>
@@ -723,7 +724,7 @@
                                     <div class="CartNeeds_row">
                                         <p class="CartNeeds_count">доступно 1 шт. </p>
                                         <div class="CartNeeds_counter">
-                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus"><svg
+                                            <div class="Counter_wrap "><button class="Counter_btn Counter_minus" disabled="true"><svg
                                                         xmlns="http://www.w3.org/2000/svg" width="10" height="2" fill="none" viewBox="0 0 10 2">
                                                         <rect width="10" height="2" rx="1" fill="#292929"></rect>
                                                     </svg></button><input class="Counter_input" type="number" value="1"><button
@@ -734,9 +735,9 @@
                                                     </svg></button></div>
                                         </div>
                                     </div>
-                                    <div class="CartNeeds_trash"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"
+                                    <div class="CartNeeds_trash Generic_gray"><svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px"
                                             fill="none" viewBox="0 0 24 24">
-                                            <path fill="var(--gray-40)"
+                                            <path class="Generic_iconPath" fill="var(--primary)"
                                                 d="M21 6h-5V4.33A2.42 2.42 0 0013.5 2h-3A2.42 2.42 0 008 4.33V6H3a1 1 0 000 2h1v11a3 3 0 003 3h10a3 3 0 003-3V8h1a1 1 0 100-2zM10 4.33c0-.16.21-.33.5-.33h3c.29 0 .5.17.5.33V6h-4V4.33zM18 19a1 1 0 01-1 1H7a1 1 0 01-1-1V8h12v11z">
                                             </path>
                                         </svg></div>
@@ -949,10 +950,10 @@
                                     <div class="react-select-container css-2b097c-container"><span aria-live="polite"
                                             aria-atomic="false" aria-relevant="additions text"
                                             class="css-7pg0cj-a11yText"></span>
-                                        <div class="react-select__control css-yk16xz-control">
+                                        <div class="react-select__control css-yk16xz-control cart-select_control">
                                             <div class="react-select__value-container css-1hwfws3">
                                                 <div class="react-select__placeholder css-1wa3eu0-placeholder">
-                                                    <p class="Cart_selectPlaceholder">Выберите способ доставки</p>
+                                                    <p class="Cart_selectPlaceholder">Выберите из списка</p>
                                                 </div>
                                                 <div class="css-1g6gooi">
                                                     <div class="react-select__input" style="display: inline-block;"><input
@@ -971,10 +972,26 @@
                                                 <div class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                                                     aria-hidden="true"><svg height="20" width="20" viewBox="0 0 20 20"
                                                         aria-hidden="true" focusable="false" class="css-8mmkcg">
-                                                        <path
+                                                        <path fill="var(--primary)"
                                                             d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z">
                                                         </path>
                                                     </svg></div>
+                                            </div>
+                                        </div>
+                                        <div class="react-select__menu css-26l3qy-menu">
+                                            <div class="react-select__menu-list css-11unzgr">
+                                                <div class="react-select__option react-select__option--is-focused css-1n7v3ny-option"
+                                                    id="react-select-3-option-0" tabindex="-1">Доставка на склад в Москве</div>
+                                                <div class="react-select__option css-yt9ioa-option" id="react-select-3-option-1" tabindex="-1">Доставка в город
+                                                    проживания семьи</div>
+                                                <div class="react-select__option css-yt9ioa-option" id="react-select-3-option-2" tabindex="-1">Доставка
+                                                    интернет-магазином</div>
+                                                <div class="react-select__option css-yt9ioa-option" id="react-select-3-option-3" tabindex="-1">Волонтерская
+                                                    доставка</div>
+                                                <div class="react-select__option css-yt9ioa-option" id="react-select-3-option-4" tabindex="-1">Комбинированная
+                                                    доставка</div>
+                                                <div class="react-select__option css-yt9ioa-option" id="react-select-3-option-5" tabindex="-1">Доставка в пункт
+                                                    выдачи Озон в городе проживания семьи (адрес уточняйте у волонтера)</div>
                                             </div>
                                         </div>
                                     </div>
@@ -1101,5 +1118,6 @@
     <script src="../scripts/popup.js"></script>
     <script src="../scripts/header.js"></script>
     <script src="../scripts/cart-need.js"></script>
+    <script src="../scripts/select.js"></script>
 </body>
 </html>
