--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -339,7 +339,7 @@
                                                 организацию и помощь в поисках благотворителей! Фонду Подари Подарок за
                                                 отзывчивость, за то, что организованно помогаете деткам и объединяете
                                                 неравнодушных людей вместе для благого дела. Дай Бог вам всем здоровья!</p>
-                                        </div><button class=" Generic_iconRoot Review_btn"
+                                        </div><button class=" Generic_iconRoot Review_btn Feedback_btn"
                                             style="margin: 40px 0px 0px 60px;">
                                             <p style="margin-right: 8px; text-transform: unset;">ПОДРОБНЕЕ</p><svg
                                                 xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"
@@ -378,7 +378,7 @@
                                             неравнодушных людей вместе для благого дела. Дай Бог вам всем здоровья!</div>
                                     </div>
                                         <button
-                                        class=" Generic_iconRoot MiniFeedback_btn">
+                                        class=" Generic_iconRoot MiniFeedback_btn Feedback_btn">
                                         <p style="margin-right: 8px; text-transform: unset;">ПОДРОБНЕЕ</p><svg
                                             xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"
                                             viewBox="0 0 40 40" class="Generic_icon">
@@ -414,7 +414,7 @@
                                         <div class="MiniFeedback_description">Благодарю Семена за возможность приобрести обувь, Викторию за продукты и Анну Марию за стиральный порошок. Спасибо большое фонду "Подари подарок" за помощь!</div>
                                     </div>
                                     <button
-                                        class="Generic_iconRoot MiniFeedback_btn">
+                                        class="Generic_iconRoot MiniFeedback_btn Feedback_btn">
                                         <p >ПОДРОБНЕЕ</p><svg xmlns="http://www.w3.org/2000/svg"
                                             width="28" height="28" fill="none" viewBox="0 0 40 40" class="Generic_icon">
                                             <path fill="var(--primary)" class="Generic_iconPath"
@@ -443,7 +443,7 @@
                                             подошли и они очень обрадовались. На реабилитацию уже поедем с новым чемоданом, он был нам очень необходим.
                                             Желаем, чтобы на Вашем пути встречались тоже такие же добрые и отзывчивые люди, как вы. Здоровья Вам!</div>
                                     </div>
-                                    <button class=" Generic_iconRoot MiniFeedback_btn">
+                                    <button class=" Generic_iconRoot MiniFeedback_btn Feedback_btn">
                                         <p style="margin-right: 8px; text-transform: unset;">ПОДРОБНЕЕ</p><svg xmlns="http://www.w3.org/2000/svg"
                                             width="28" height="28" fill="none" viewBox="0 0 40 40" class="Generic_icon">
                                             <path fill="var(--primary)" class="Generic_iconPath"
@@ -470,7 +470,7 @@
                                             огромное за такой подарок. Спасибо фонду «Подари подарок» и всем волонтерам. Всем здоровья и хорошего
                                             настроения.</div>
                                     </div>
-                                        <button class=" Generic_iconRoot MiniFeedback_btn">
+                                        <button class=" Generic_iconRoot MiniFeedback_btn Feedback_btn">
                                         <p style="margin-right: 8px; text-transform: unset;">ПОДРОБНЕЕ</p><svg xmlns="http://www.w3.org/2000/svg"
                                             width="28" height="28" fill="none" viewBox="0 0 40 40" class="Generic_icon">
                                             <path fill="var(--primary)" class="Generic_iconPath"
@@ -502,7 +502,7 @@
                                             здорово, что есть такие люди с БОЛЬШИМ СЕРДЦЕМ. Спасибо вам огромное. </div>
                                     </div>
                                         <button
-                                        class=" Generic_iconRoot MiniFeedback_btn">
+                                        class=" Generic_iconRoot MiniFeedback_btn Feedback_btn">
                                         <p style="margin-right: 8px; text-transform: unset;">ПОДРОБНЕЕ</p><svg xmlns="http://www.w3.org/2000/svg"
                                             width="28" height="28" fill="none" viewBox="0 0 40 40" class="Generic_icon">
                                             <path fill="var(--primary)" class="Generic_iconPath"
@@ -531,7 +531,7 @@
                                             подошли и они очень обрадовались. На реабилитацию уже поедем с новым чемоданом, он был нам очень необходим.
                                             Желаем, чтобы на Вашем пути встречались тоже такие же добрые и отзывчивые люди, как вы. Здоровья Вам!</div>
                                     </div>
-                                    <button class=" Generic_iconRoot MiniFeedback_btn">
+                                    <button class=" Generic_iconRoot MiniFeedback_btn Feedback_btn">
                                         <p style="margin-right: 8px; text-transform: unset;">ПОДРОБНЕЕ</p><svg xmlns="http://www.w3.org/2000/svg"
                                             width="28" height="28" fill="none" viewBox="0 0 40 40" class="Generic_icon">
                                             <path fill="var(--primary)" class="Generic_iconPath"
@@ -558,7 +558,7 @@
                                             огромное за такой подарок. Спасибо фонду «Подари подарок» и всем волонтерам. Всем здоровья и хорошего
                                             настроения.</div>
                                     </div>
-                                        <button class=" Generic_iconRoot MiniFeedback_btn">
+                                        <button class=" Generic_iconRoot MiniFeedback_btn Feedback_btn">
                                         <p style="margin-right: 8px; text-transform: unset;">ПОДРОБНЕЕ</p><svg xmlns="http://www.w3.org/2000/svg"
                                             width="28" height="28" fill="none" viewBox="0 0 40 40" class="Generic_icon">
                                             <path fill="var(--primary)" class="Generic_iconPath"
@@ -590,7 +590,7 @@
                                             здорово, что есть такие люди с БОЛЬШИМ СЕРДЦЕМ. Спасибо вам огромное. </div>
                                     </div>
                                         <button
-                                        class=" Generic_iconRoot MiniFeedback_btn">
+                                        class=" Generic_iconRoot MiniFeedback_btn Feedback_btn">
                                         <p style="margin-right: 8px; text-transform: unset;">ПОДРОБНЕЕ</p><svg xmlns="http://www.w3.org/2000/svg"
                                             width="28" height="28" fill="none" viewBox="0 0 40 40" class="Generic_icon">
                                             <path fill="var(--primary)" class="Generic_iconPath"
@@ -619,7 +619,7 @@
                                             подошли и они очень обрадовались. На реабилитацию уже поедем с новым чемоданом, он был нам очень необходим.
                                             Желаем, чтобы на Вашем пути встречались тоже такие же добрые и отзывчивые люди, как вы. Здоровья Вам!</div>
                                     </div>
-                                    <button class=" Generic_iconRoot MiniFeedback_btn">
+                                    <button class=" Generic_iconRoot MiniFeedback_btn Feedback_btn">
                                         <p style="margin-right: 8px; text-transform: unset;">ПОДРОБНЕЕ</p><svg xmlns="http://www.w3.org/2000/svg"
                                             width="28" height="28" fill="none" viewBox="0 0 40 40" class="Generic_icon">
                                             <path fill="var(--primary)" class="Generic_iconPath"
@@ -646,7 +646,7 @@
                                             огромное за такой подарок. Спасибо фонду «Подари подарок» и всем волонтерам. Всем здоровья и хорошего
                                             настроения.</div>
                                     </div>
-                                        <button class=" Generic_iconRoot MiniFeedback_btn">
+                                        <button class=" Generic_iconRoot MiniFeedback_btn Feedback_btn">
                                         <p style="margin-right: 8px; text-transform: unset;">ПОДРОБНЕЕ</p><svg xmlns="http://www.w3.org/2000/svg"
                                             width="28" height="28" fill="none" viewBox="0 0 40 40" class="Generic_icon">
                                             <path fill="var(--primary)" class="Generic_iconPath"
@@ -711,12 +711,11 @@
             </div>
         </footer>
     </div>
-    <div class="popup-root" style="display: none;">
-        <div class="react-responsive-modal-root" data-testid="root">
+<div class="popup">
+    <div class="react-responsive-modal-root" data-testid="root">
         <div class="react-responsive-modal-overlay PopUpFull_overlay" data-testid="overlay" aria-hidden="true"
             style="animation: 300ms ease 0s 1 normal none running react-responsive-modal-overlay-in;"></div>
-        <div class="react-responsive-modal-container react-responsive-modal-containerCenter"
-            data-testid="modal-container">
+        <div class="react-responsive-modal-container react-responsive-modal-containerCenter" data-testid="modal-container">
             <div class="react-responsive-modal-modal PopUpFull_modal" role="dialog" aria-modal="true"
                 data-testid="modal" tabindex="-1"
                 style="animation: 300ms ease 0s 1 normal none running react-responsive-modal-modal-in;">
@@ -725,15 +724,15 @@
                         <p class="FeedbackView_heading">Отзыв участника акции</p>
                         <div class="FeedbackView_infoBlock">
                             <div class="FeedbackView_image"
-                                style="background-image: url(&quot;https://storage.yandexcloud.net/pp-prod/Whats_App_Image_2024_06_28_at_13_26_13_2_e604aed5c4.webp&quot;); background-position: 50% 30%; background-size: 150%; background-repeat: no-repeat;">
+                                style="background-image: url(&quot;https://storage.yandexcloud.net/pp-prod/Whats_App_Image_2024_07_18_at_08_53_13_6c86da4b12.webp&quot;); background-position: 50% 30%; background-size: 150%; background-repeat: no-repeat;">
                             </div>
                             <div class="FeedbackView_info">
                                 <div class="FeedbackView_badge">Весенняя акция</div>
                                 <div>
-                                    <div class="FeedbackView_code">34-КряК-КРС-ПА24</div>
-                                    <div class="FeedbackView_title">Анна и Танечка</div><a
-                                        class=" Generic_iconRoot "
-                                        href="/families/anna-i-tanyusha" style="margin-top: 12px;"><svg
+                                    <div class="FeedbackView_code">75-МО-КРЗ-ПА24</div>
+                                    <div class="FeedbackView_title">Сергей Николаевич</div><a
+                                        class=" Generic_iconRoot undefined undefined "
+                                        href="/families/sergej-nikolaevich-1" style="margin-top: 12px;"><svg
                                             xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"
                                             viewBox="0 0 40 40" class="Generic_icon">
                                             <path fill="var(--primary)" class="Generic_iconPath"
@@ -743,34 +742,46 @@
                                         <p style="text-transform: unset; margin-left: 8px;">ПЕРЕЙТИ К СЕМЬЕ</p>
                                     </a>
                                 </div>
-                                <div class="FeedbackView_time">28 июня 2024</div>
+                                <div class="FeedbackView_time">24 июля 2024</div>
                             </div>
                         </div>
-                        <div class="FeedbackView_content"><img src="../../assets/quote.svg" alt="quote">
-                            <div class="FeedbackView_text">Хотим от нашей семьи поблагодарить БФ " ПОДАРИ
-                                ПОДАРОК" И ДАРИТЕЛЕЙ МАРИНУ И ИГОРЯ за подаренный нам МФУ для того, чтобы распечатывать
-                                школьный материал по учебе. Это прям здорово, что есть такие люди с БОЛЬШИМ СЕРДЦЕМ.
-                                Спасибо вам огромное. </div>
+                        <div class="FeedbackView_content"><img src="/assets/quote.svg" alt="quote">
+                            <div class="FeedbackView_text">Благодарю Давида и его семью: Валерия, Мариам и Тамару за
+                                оказанную мне помощь. Это очень поможет в реабилитации и в жизни. Огромное вам спасибо.
+                                Также большое спасибо фонду "Подари подарок", Ларисе Безвербной и всем сотрудникам. Храни
+                                вас всех Господь!</div>
                         </div>
                         <div class="FeedbackView_medias">
                             <div id="media-0" class="FeedbackView_media"><img
-                                    src="https://storage.yandexcloud.net/pp-prod/Whats_App_Image_2024_06_28_at_13_26_13_2_e604aed5c4.webp">
+                                    src="https://storage.yandexcloud.net/pp-prod/Whats_App_Image_2024_07_18_at_08_53_13_6c86da4b12.webp">
                                 <div class="FeedbackView_shadow"></div>
                             </div>
-                            <div id="media-1" class="FeedbackView_media"><img
-                                    src="https://storage.yandexcloud.net/pp-prod/Whats_App_Image_2024_06_28_at_13_26_13_3_931f59f376.webp">
+                            <div id="media-1" class="FeedbackView_media">
+                                <div class="FeedbackView_image"
+                                    style="background-image: url(&quot;https://storage.yandexcloud.net/pp-prod/Whats_App_Image_2024_07_18_at_08_53_13_6c86da4b12.webp&quot;); background-position: 50% 30%; background-size: 150%; background-repeat: no-repeat; width: 100%; height: 100%; min-width: unset; min-height: unset;">
+                                </div><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none"
+                                    viewBox="0 0 60 60" class="FeedbackView_playBtn">
+                                    <g>
+                                        <path fill="#ffffff"
+                                            d="M45.563,29.174l-22-15c-0.307-0.208-0.703-0.231-1.031-0.058C22.205,14.289,22,14.629,22,15v30 c0,0.371,0.205,0.711,0.533,0.884C22.679,45.962,22.84,46,23,46c0.197,0,0.394-0.059,0.563-0.174l22-15 C45.836,30.64,46,30.331,46,30S45.836,29.36,45.563,29.174z M24,43.107V16.893L43.225,30L24,43.107z">
+                                        </path>
+                                        <path fill="#ffffff"
+                                            d="M30,0C13.458,0,0,13.458,0,30s13.458,30,30,30s30-13.458,30-30S46.542,0,30,0z M30,58C14.561,58,2,45.439,2,30 S14.561,2,30,2s28,12.561,28,28S45.439,58,30,58z">
+                                        </path>
+                                    </g>
+                                </svg>
                                 <div class="FeedbackView_shadow"></div>
                             </div>
                         </div>
-                        <div class="FeedbackView_bottom"><a class=" Generic_iconRoot "
-                                href="./donate.html"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28"
-                                    fill="none" viewBox="0 0 40 40" class="Generic_icon">
+                        <div class="FeedbackView_bottom"><a class=" Generic_iconRoot undefined undefined "
+                                href="/donate"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"
+                                    viewBox="0 0 40 40" class="Generic_icon">
                                     <path fill="var(--primary)" class="Generic_iconPath"
                                         d="M6.25 32.5a5 5 0 005 5h7.188a.313.313 0 00.312-.313V22.813a.313.313 0 00-.313-.313H6.876a.625.625 0 00-.625.625V32.5zm12.5-12.813V11.25h2.5v8.438a.312.312 0 00.313.312H32.5a3.743 3.743 0 003.06-1.586 3.758 3.758 0 00.69-2.164V15a3.75 3.75 0 00-3.75-3.75h-3.167a.157.157 0 01-.133-.234 5.625 5.625 0 00-9.2-6.42 5.625 5.625 0 00-9.2 6.42.156.156 0 01-.133.234H7.5A3.75 3.75 0 003.75 15v1.25A3.757 3.757 0 007.5 20h10.938a.313.313 0 00.312-.313zm2.5-11.562a3.125 3.125 0 113.125 3.125H21.25V8.125zm-5.848-3.117a3.125 3.125 0 013.348 3.117v3.125h-3.125a3.125 3.125 0 01-.223-6.241v-.001zm6.16 32.492h7.188a5 5 0 005-5v-9.375a.625.625 0 00-.625-.625H21.562a.313.313 0 00-.312.313v14.375a.312.312 0 00.313.312z">
                                     </path>
                                 </svg>
                                 <p style="text-transform: unset; margin-left: 8px;">ПОДДЕРЖАТЬ ФОНД</p>
-                            </a><a class=" Generic_iconRoot Generic_gray " href="/families"><svg
+                            </a><a class=" Generic_iconRoot Generic_gray undefined " href="/families"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"
                                     viewBox="0 0 40 40" class="Generic_icon">
                                     <path fill="var(--primary)" class="Generic_iconPath"
@@ -793,5 +804,6 @@
 <script src="../../scripts/burger.js"></script>
 <script src="../../scripts/checkbox.js"></script>
 <script src="../../scripts/header.js"></script>
+<script src="../../scripts/feedback-popup.js"></script>
 </body>
 </html>
