implement select menu and checkboxes in news page

--- a/pages/news-and-reports.html
+++ b/pages/news-and-reports.html
@@ -200,7 +200,7 @@
                                 <div class="react-select__control css-yk16xz-control">
                                     <div
                                         class="react-select__value-container react-select__value-container--has-value css-1hwfws3">
-                                        <div class="react-select__single-value css-1uccc91-singleValue">По дате публикации
+                                        <div class="react-select__single-value react-select__placeholder css-1uccc91-singleValue">По дате публикации
                                         </div><input id="react-select-104-input" readonly="" tabindex="0"
                                             aria-autocomplete="list" class="css-62g3xt-dummyInput" value="">
                                     </div>
@@ -215,39 +215,55 @@
                                             </svg></div>
                                     </div>
                                 </div>
+                                <div class="react-select__menu css-26l3qy-menu">
+                                    <div class="react-select__menu-list css-11unzgr">
+                                        <div class="react-select__option  css-1n7v3ny-option"
+                                            id="react-select-13-option-0" tabindex="-1">По дате публикации</div>
+                                        <div class="react-select__option css-yt9ioa-option" id="react-select-13-option-1" tabindex="-1">По дате
+                                            модификации</div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <p class="Category_selectTitle" style="margin-top: 40px;">Категории</p>
                         <div class="Category_checkBoxBar">
                             <div style="margin-bottom: 24px;"><label class=""
                                     style="display: flex; align-items: center;"><span>
-                                        <div class=""
+                                        <div class="checkbox"
                                             style="height: 24px; width: 24px; border-width: 2px; border-color: var(--gray-100); border-style: solid; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
-                                            <input type="checkbox" name="" hidden="" value=""></div>
+                                            <input type="checkbox" name="" hidden="" value="">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40"><path fill="#FF3351" d="M16.433 30a1.669 1.669 0 01-1.216-.533l-8.1-8.617a1.669 1.669 0 012.433-2.283l6.867 7.316L30.433 10.55a1.667 1.667 0 112.467 2.233L17.667 29.45a1.665 1.665 0 01-1.217.55h-.017z"></path></svg>
+                                        </div>
                                     </span><span class=""
                                         style="margin-left: 16px; user-select: none; font-family: var(--fontFamily); font-size: 14px; font-weight: 700; line-height: 20px; letter-spacing: 0px; text-transform: uppercase;">События</span></label>
                             </div>
                             <div style="margin-bottom: 24px;"><label class=""
                                     style="display: flex; align-items: center;"><span>
-                                        <div class=""
+                                        <div class="checkbox"
                                             style="height: 24px; width: 24px; border-width: 2px; border-color: var(--gray-100); border-style: solid; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
-                                            <input type="checkbox" name="" hidden="" value=""></div>
+                                            <input type="checkbox" name="" hidden="" value="">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40"><path fill="#FF3351" d="M16.433 30a1.669 1.669 0 01-1.216-.533l-8.1-8.617a1.669 1.669 0 012.433-2.283l6.867 7.316L30.433 10.55a1.667 1.667 0 112.467 2.233L17.667 29.45a1.665 1.665 0 01-1.217.55h-.017z"></path></svg>
+                                        </div>
                                     </span><span class=""
                                         style="margin-left: 16px; user-select: none; font-family: var(--fontFamily); font-size: 14px; font-weight: 700; line-height: 20px; letter-spacing: 0px; text-transform: uppercase;">Мероприятия</span></label>
                             </div>
                             <div style="margin-bottom: 24px;"><label class=""
                                     style="display: flex; align-items: center;"><span>
-                                        <div class=""
+                                        <div class="checkbox"
                                             style="height: 24px; width: 24px; border-width: 2px; border-color: var(--gray-100); border-style: solid; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
-                                            <input type="checkbox" name="" hidden="" value=""></div>
+                                            <input type="checkbox" name="" hidden="" value="">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40"><path fill="#FF3351" d="M16.433 30a1.669 1.669 0 01-1.216-.533l-8.1-8.617a1.669 1.669 0 012.433-2.283l6.867 7.316L30.433 10.55a1.667 1.667 0 112.467 2.233L17.667 29.45a1.665 1.665 0 01-1.217.55h-.017z"></path></svg>
+                                        </div>
                                     </span><span class=""
                                         style="margin-left: 16px; user-select: none; font-family: var(--fontFamily); font-size: 14px; font-weight: 700; line-height: 20px; letter-spacing: 0px; text-transform: uppercase;">Новости
                                         и отчеты</span></label></div>
                             <div style="margin-bottom: 0px;"><label class=""
                                     style="display: flex; align-items: center;"><span>
-                                        <div class=""
+                                        <div class="checkbox"
                                             style="height: 24px; width: 24px; border-width: 2px; border-color: var(--gray-100); border-style: solid; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
-                                            <input type="checkbox" name="" hidden="" value=""></div>
+                                            <input type="checkbox" name="" hidden="" value="">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40"><path fill="#FF3351" d="M16.433 30a1.669 1.669 0 01-1.216-.533l-8.1-8.617a1.669 1.669 0 012.433-2.283l6.867 7.316L30.433 10.55a1.667 1.667 0 112.467 2.233L17.667 29.45a1.665 1.665 0 01-1.217.55h-.017z"></path></svg>
+                                        </div>
                                     </span><span class=""
                                         style="margin-left: 16px; user-select: none; font-family: var(--fontFamily); font-size: 14px; font-weight: 700; line-height: 20px; letter-spacing: 0px; text-transform: uppercase;">Акции</span></label>
                             </div>
@@ -480,5 +496,7 @@
     </div>
     <script src="../scripts/burger.js"></script>
     <script src="../scripts/header.js"></script>
+    <script src="../scripts/select.js"></script>
+    <script src="../scripts/checkbox.js"></script>
 </body>
 </html>
